modules/gdscript/tests/scripts/analyzer/errors/extend_unknown.gd
class Foo:
	pass

class Bar extends Foo.Baz:
	pass

func test():
	print('not ok')
